# banana-slides

./: .env.example  ppt.command  pyproject.toml  run_local_all.sh
backend/: README.md  app.py  config.py
backend/controllers/: agent_controller.py  export_controller.py  material_controller.py  page_controller.py  project_controller.py  reference_file_controller.py
backend/examples/: use_image_editability_service.py
backend/services/: ai_service.py  export_service.py  export_service_inpainting.py  file_parser_service.py  image_editability_service.py  inpainting_service.py  prompts.py  slide_agent_tools.py  task_manager.py
backend/services/ai_providers/: __init__.py
backend/services/ai_providers/image/: __init__.py  base.py  genai_provider.py  openai_provider.py  volcengine_inpainting_provider.py
backend/services/ai_providers/ocr/: __init__.py
backend/services/ai_providers/text/: __init__.py  base.py  genai_provider.py  openai_provider.py
backend/tests/: test_inpainting_service.py
backend/tests/integration/: test_full_workflow.py
backend/utils/: coordinate_utils.py  mask_utils.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: endpoints.ts
frontend/src/components/outline/: OutlineCard.tsx
frontend/src/components/preview/: AgentWindow.tsx  SlideCard.tsx
frontend/src/components/shared/: ConfirmDialog.tsx  index.ts
frontend/src/pages/: DetailEditor.tsx  History.tsx  Home.tsx  OutlineEditor.tsx  SlidePreview.tsx
frontend/src/store/: useProjectStore.ts
